--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@
                     <div class="price">3.5<span class="unit">만원</span></div>
                     <p>회차당</p>
                     <ul style="text-align: center; margin: 30px 0; list-style-type: disc; list-style-position: inside; padding: 0;">
-                        <li style="margin-bottom: 10px;">1회 50분 수업</li>
+                        <li style="margin-bottom: 10px;">1회 60분 수업</li>
                         <li style="margin-bottom: 10px;">개별 맞춤 진도</li>
                         <li style="margin-bottom: 10px;">실시간 피드백</li>
                         <li style="margin-bottom: 10px;">수업 자료 제공</li>
@@ -1210,7 +1210,7 @@
                     <h3>3개월 패키지</h3>
                     <div class="savings">회차당 5천원 절약!</div>
                     <div class="price">3.0<span class="unit">만원</span></div>
-                    <p>회차당 (총 36만원)</p>
+                    <p>회차당</p>
                     <ul style="text-align: center; margin: 30px 0; list-style-type: disc; list-style-position: inside; padding: 0;">
                         <li style="margin-bottom: 10px;">총 12회 수업</li>
                         <li style="margin-bottom: 10px;">체계적인 커리큘럼</li>
