단순 텍스트 변경

--- a/index.html
+++ b/index.html
@@ -881,7 +881,7 @@
                     <div style="font-size: 50px; margin-bottom: 20px; text-align: center;">🎬</div>
                     <h3 style="margin-bottom: 15px; text-align: center; color: #4ecdc4;">4학년 박○○ 학생</h3>
                     <p style="font-size: 1.1em; line-height: 1.6; text-align: center;">
-                        "영상 편집을 모르는 상태에서, 아이디어로
+                        "영상 편집을 모르는 상태에서, 제 아이디어로만
                         <strong style="color: #4ecdc4;">유튜브 쇼츠</strong>를 만들었어요!"
                     </p>
                     <div style="background: rgba(76, 205, 196, 0.2); padding: 15px; border-radius: 10px; margin-top: 20px; text-align: center;">
@@ -897,7 +897,7 @@
                         일러스트까지 만들었어요!"
                     </p>
                     <div style="background: rgba(76, 205, 196, 0.2); padding: 15px; border-radius: 10px; margin-top: 20px; text-align: center;">
-                        <small style="opacity: 0.9;">🎯 결과물: 20페이지 완성된 단편소설</small>
+                        <small style="opacity: 0.9;">🎯 결과물: 20페이지 단편소설</small>
                     </div>
                 </div>
                 
