단순 텍스트 변경2

--- a/index.html
+++ b/index.html
@@ -970,11 +970,11 @@
                 <img src="images/teacher-profile.jpg" alt="AI 교육 전문가 프로필" class="teacher-image" style="width: 250px; height: 250px; border-radius: 50%; object-fit: cover; margin: 0 auto; display: block;">
                 <div class="teacher-info">
                     <h3>AI 교육 전문가</h3>
-                    <div class="role">카카오 계열사 엔지니어 출신</div>
+                    <div class="role">카카오 엔지니어 출신</div>
                     <ul class="credentials">
                         <li>원격교육 전문가 자격증 보유</li>
                         <li>코딩교육지도사 자격증 보유</li>
-                        <li>카카오 계열사 AI 프로젝트 경험</li>
+                        <li>카카오 AI 프로젝트 참여 경험</li>
                         <li>1:1 대면 / 비대면 코딩교육 5년 경력</li>
                         <li>Fun코딩, 블록코딩, Python 지도</li>
                         <li>초등학생 맞춤 교육법 전문</li>
