학생명 #0f172a로 변경

--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                 <div style="background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); border: 1px solid #e2e8f0; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 20px 40px rgba(0, 0, 0, 0.12)'; this.style.borderColor='#3b82f6';"
                     onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)'; this.style.borderColor='#e2e8f0';">
                     <div style="font-size: 50px; margin-bottom: 20px; text-align: center;">📱</div>
-                    <h3 style="margin-bottom: 15px; text-align: center; color: #3b82f6; font-size: 1.2em;">6학년 김○○ 학생</h3>
+                    <h3 style="margin-bottom: 15px; text-align: center; color: #0f172a; font-size: 1.2em;">6학년 김○○ 학생</h3>
                     <p style="font-size: 1.05em; line-height: 1.6; text-align: center; color: #475569;">
                         "아이디어와 기획만 있었는데, 코딩 없이
                         <strong style="color: #3b82f6;">나만의 설문조사 앱</strong>을 만들었어요!"
@@ -846,7 +846,7 @@
                 <div style="background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); border: 1px solid #e2e8f0; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 20px 40px rgba(0, 0, 0, 0.12)'; this.style.borderColor='#3b82f6';"
                     onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)'; this.style.borderColor='#e2e8f0';">
                     <div style="font-size: 50px; margin-bottom: 20px; text-align: center;">🎬</div>
-                    <h3 style="margin-bottom: 15px; text-align: center; color: #3b82f6; font-size: 1.2em;">4학년 박○○ 학생</h3>
+                    <h3 style="margin-bottom: 15px; text-align: center; color: #0f172a; font-size: 1.2em;">4학년 박○○ 학생</h3>
                     <p style="font-size: 1.05em; line-height: 1.6; text-align: center; color: #475569;">
                         "영상 편집을 모르는 상태에서, 제 아이디어로만
                         <strong style="color: #3b82f6;">유튜브 쇼츠</strong>를 만들었어요!"
@@ -859,7 +859,7 @@
                 <div style="background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); border: 1px solid #e2e8f0; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 20px 40px rgba(0, 0, 0, 0.12)'; this.style.borderColor='#3b82f6';"
                     onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)'; this.style.borderColor='#e2e8f0';">
                     <div style="font-size: 50px; margin-bottom: 20px; text-align: center;">📚</div>
-                    <h3 style="margin-bottom: 15px; text-align: center; color: #3b82f6; font-size: 1.2em;">5학년 이○○ 학생</h3>
+                    <h3 style="margin-bottom: 15px; text-align: center; color: #0f172a; font-size: 1.2em;">5학년 이○○ 학생</h3>
                     <p style="font-size: 1.05em; line-height: 1.6; text-align: center; color: #475569;">
                         "AI와 함께 <strong style="color: #3b82f6;">나만의 단편소설</strong>을 제작하고, 일러스트까지 만들었어요!"
                     </p>
@@ -871,7 +871,7 @@
                 <div style="background: white; padding: 30px; border-radius: 20px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08); border: 1px solid #e2e8f0; transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 20px 40px rgba(0, 0, 0, 0.12)'; this.style.borderColor='#3b82f6';"
                     onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 10px 30px rgba(0, 0, 0, 0.08)'; this.style.borderColor='#e2e8f0';">
                     <div style="font-size: 50px; margin-bottom: 20px; text-align: center;">🎵</div>
-                    <h3 style="margin-bottom: 15px; text-align: center; color: #3b82f6; font-size: 1.2em;">2학년 최○○ 학생</h3>
+                    <h3 style="margin-bottom: 15px; text-align: center; color: #0f172a; font-size: 1.2em;">2학년 최○○ 학생</h3>
                     <p style="font-size: 1.05em; line-height: 1.6; text-align: center; color: #475569;">
                         "평소 좋아하던 노래를 바꿔서
                         <strong style="color: #3b82f6;">나만의 노래</strong>를 AI와 함께 만들었어요!"
