프로그레스 바 업데이트 - style하위 fillUp 업데이트 > 93

--- a/index.html
+++ b/index.html
@@ -981,7 +981,7 @@
                             <span style="color: #ff6b35; font-weight: bold;">28/30명</span>
                         </div>
                         <div style="background: rgba(255, 255, 255, 0.2); height: 8px; border-radius: 4px; overflow: hidden;">
-                            <div style="background: linear-gradient(90deg, #ff6b35, #f7931e); height: 100%; width: 93%; border-radius: 4px; animation: fillUp 2s ease-out;"></div>
+                            <div style="background: linear-gradient(90deg, #ff6b35, #f7931e); height: 100%; width: 0%; border-radius: 4px; animation: fillUp 2s ease-out forwards;"></div>
                         </div>
                     </div>
                     <p style="font-size: 14px; opacity: 0.8;">⚡ 2025년 10월 1일 기준 잔여 2자리</p>
@@ -1012,7 +1012,7 @@
                     width: 0%;
                 }
                 to {
-                    width: 60%;
+                    width: 93%;
                 }
             }
         </style>
