--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
             <div style="text-align: center; margin-top: 50px;">
                 <div style="background: rgba(255, 255, 255, 0.1); backdrop-filter: blur(10px); padding: 20px; border-radius: 15px; border: 1px solid rgba(255, 255, 255, 0.2); margin-bottom: 30px; max-width: 600px; margin-left: auto; margin-right: auto; margin-bottom: 30px;">
                     <p style="margin: 0; font-size: 16px;">
-                        <span style="color: #ff6b35; font-weight: bold;">⚠️ 안내:</span> 정원이 가득 찬 경우, <strong style="color: #4ecdc4;">가장 빠른 수업 가능 날짜</strong>를 개별적으로 안내해드립니다.
+                        <span style="color: #ff6b35; font-weight: bold;">⚠️ 안내:</span> 많은 성원을 보내주셔서 현재 정원이 가득 차 있습니다! <strong style="color: #4ecdc4;">카카오톡 채널</strong>을 통해 상담 요청주시면 <strong style="color: #4ecdc4;">가장 빠른 수업 가능 날짜</strong>를 개별적으로 안내해드립니다.
                     </p>
                 </div>
             </div>
